# PixelAI

./: .gitattributes  .gitignore  BACKLOG_6_WEEKS.md  BLOG_POST.md  HACKATHON.md  PRD_1.0_outline.md  README.md  agent.md  index.html  label_frames_yolo.py  package-lock.json  package.json  requirements.txt
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/capture/: ocr.rs  redaction.rs  screenshot.rs
apps/desktop/src-tauri/src/commands/: observe.rs  permissions.rs  telemetry.rs
apps/desktop/src-tauri/src/hooks/: app_window.rs  input_events.rs
apps/desktop/src-tauri/src/models/: telemetry.rs
apps/desktop/src-tauri/src/pipeline/: collector.rs  normalizer.rs  runtime.rs  uploader.rs
apps/desktop/src-tauri/src/storage/: observations.rs  queue.rs  snapshots.rs
services/backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
services/backend/alembic/: env.py
services/backend/alembic/versions/: 20260223_0001_core_tables.py  20260223_0002_ai_tables.py
services/backend/src/deskops_backend/: __init__.py  main.py  settings.py
services/backend/src/deskops_backend/ai/: router.py
services/backend/src/deskops_backend/application/: ai_orchestration_service.py  container.py  (+3 more)
services/backend/tests/: test_ai_orchestration_service.py  test_ai_router.py  test_db_health.py  test_designer_agent.py  test_metrics_projector.py  test_metrics_service.py  test_opportunity_agent.py  test_outbox_daemon.py  test_outbox_worker.py  test_summarizer_agent.py  test_telemetry_service.py
(+150 files in other folders)
