[package]
name = "deskops-desktop"
version = "0.1.0"
description = "DeskOps desktop capture agent"
authors = ["DeskOps Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.78"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
once_cell = "1.19"
regex = "1.11"
rdev = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = ["http-all", "path-all", "shell-all"] }
url = "2.5"
uuid = { version = "1.10", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
